@@ -2,24 +2,18 @@
 
 WAST是一个高性能Java工具集库包，包括JSON、YAML、CSV、HttpClient、JDBC和EL引擎.
 
-性能评测数据(github: https://github.com/wycst/wast-jmh-test) <br>
-[https://gitee.com/xiaoch0209/wast-jmh-test](https://gitee.com/xiaoch0209/wast-jmh-test)
+此分支底层弃用sun.misc.Unsafe类(JDK25+运行时默认第一次控制台会打印弃用警告，可以使用-Dsun.misc.unsafe.memory.access=allow清除警告)，取而代之的是jdk.internal.misc.Unsafe, 使用jdk.internal.misc.Unsafe需要添加vm参数:
 
-2022-09-25 json性能测试数据 <br>
-[https://gitee.com/xiaoch0209/wast-jmh-test/blob/main/README_0925_json.md](https://gitee.com/xiaoch0209/wast-jmh-test/blob/main/README_0925_json.md)
-
-2022-12-14 表达式引擎<br>
-[https://gitee.com/xiaoch0209/wast-jmh-test/blob/main/README_1214_EL.md](https://gitee.com/xiaoch0209/wast-jmh-test/blob/main/README_1214_EL.md)
-
-此库不依赖任何第三方库，对JDK版本要求1.6及以上即可。
+```
+--add-exports java.base/jdk.internal.misc=ALL-UNNAMED
+```
 
 ## Maven
 
 ```xml
-
 <dependency>
     <groupId>io.github.wycst</groupId>
-    <artifactId>wast</artifactId>
+    <artifactId>wast-jdk25</artifactId>
     <version>0.0.27</version>
 </dependency>
 ```
